--- a/localization/english/replace/country_flavor_text_l_english.yml
+++ b/localization/english/replace/country_flavor_text_l_english.yml
@@ -1,119 +1,173 @@
 ﻿l_english:
- FRA_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
- PER_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
- NET_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
- SAR_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
- DEN_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
- SWE_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
- HRE_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
- BYZ_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
- br_elysium_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
- VEN_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
- LOM_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
- MAL_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
- br_tartaria_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
   
   # South-East Asia
- LAN_FLAVOR_TEXT: "The Republic of Lanfang was established by a democratic syndicate of Chinese miners hoping to exploit the gold reserves of Borneo. Can Lanfang resist the advances of the Dutch and achieve the prosperity it seeks?"
- ACE_FLAVOR_TEXT: "The Aceh Sultanate is experiencing a resurgence in power due to the efforts of the Raja Muda. Can Aceh restore its empire and assert its independence in the face of Dutch expansion?"
- BRU_FLAVOR_TEXT: "Brunei has so far repelled the attempts of colonial powers to infringe upon its sovereignty. Will Brunei fall into decline and obscurity, or could it once more become a regional power?"
- JOH_FLAVOR_TEXT: "Johore occupies a precarious position as both the British and the Dutch greedily eye their territory. Will Johor manage to retain what little sovereignty it has left?"
- SIA_FLAVOR_TEXT: "Siam has established itself as the dominant regional power in South-East Asia under the Rattanakosin dynasty. But will Siam manage to reform its economy and society for the modern age?"
- DAI_FLAVOR_TEXT: "A newly reunited Vietnam emerges from centuries of division and strife. Will Dai Nam consolidate itself and build a great nation, or is it destined to be divided once more?"
- BUR_FLAVOR_TEXT: "It took many bloody conflicts to establish the Third Burmese Empire, and it seems that the struggle is far from over as the British Empire makes its ambitions known. Will Burma become yet another British colony, or will it stand strong against the foreign invaders?"
- CAM_FLAVOR_TEXT: "Cambodia has fallen far since the golden age of the Khmer Empire. Can the Khmer state rise once more, or will this dark age last forever?"
- LUA_FLAVOR_TEXT: "Once the seat of the mighty Kingdom of Lan Xang, Luang Prabang is a shadow of its former self. Split between the regional powers of Dai Nam and Siam, can the Lao people emerge strong and independent?"
+   LAN_FLAVOR_TEXT: "The Republic of Lanfang was established by a democratic syndicate of Chinese miners hoping to exploit the gold reserves of Borneo. Can Lanfang resist the advances of the Dutch and achieve the prosperity it seeks?"
+   ACE_FLAVOR_TEXT: "The Aceh Sultanate is experiencing a resurgence in power due to the efforts of the Raja Muda. Can Aceh restore its empire and assert its independence in the face of Dutch expansion?"
+   BRU_FLAVOR_TEXT: "Brunei has so far repelled the attempts of colonial powers to infringe upon its sovereignty. Will Brunei fall into decline and obscurity, or could it once more become a regional power?"
+   JOH_FLAVOR_TEXT: "Johore occupies a precarious position as both the British and the Dutch greedily eye their territory. Will Johor manage to retain what little sovereignty it has left?"
+   SIA_FLAVOR_TEXT: "Siam has established itself as the dominant regional power in South-East Asia under the Rattanakosin dynasty. But will Siam manage to reform its economy and society for the modern age?"
+   DAI_FLAVOR_TEXT: "A newly reunited Vietnam emerges from centuries of division and strife. Will Dai Nam consolidate itself and build a great nation, or is it destined to be divided once more?"
+   BUR_FLAVOR_TEXT: "It took many bloody conflicts to establish the Third Burmese Empire, and it seems that the struggle is far from over as the British Empire makes its ambitions known. Will Burma become yet another British colony, or will it stand strong against the foreign invaders?"
+   CAM_FLAVOR_TEXT: "Cambodia has fallen far since the golden age of the Khmer Empire. Can the Khmer state rise once more, or will this dark age last forever?"
+   LUA_FLAVOR_TEXT: "Once the seat of the mighty Kingdom of Lan Xang, Luang Prabang is a shadow of its former self. Split between the regional powers of Dai Nam and Siam, can the Lao people emerge strong and independent?"
   
   # Balkans
- SER_FLAVOR_TEXT: "Serbia has fought hard for its independence, and will surely have to continue its struggle to retain it. Wedged between great powers, will Serbia become the powder keg of Europe?"
- WAL_FLAVOR_TEXT: "Calls for Romanian unification and political independence complicate regional politics, as Basileía Romaíon, Hungary and the Golden Horde have an interest in enforcing the status quo. Can Romania win its freedom?"
- MOL_FLAVOR_TEXT: "Calls for Romanian unification and political independence complicate regional politics, as Basileía Romaíon, Hungary and the Golden Horde have an interest in enforcing the status quo. Can Romania win its freedom?"
+   SER_FLAVOR_TEXT: "Serbia has fought hard for its independence, and will surely have to continue its struggle to retain it. Wedged between great powers, will Serbia become the powder keg of Europe?"
+   WAL_FLAVOR_TEXT: "Calls for Romanian unification and political independence complicate regional politics, as Basileía Romaíon, Hungary and the Golden Horde have an interest in enforcing the status quo. Can Romania win its freedom?"
+   MOL_FLAVOR_TEXT: "Calls for Romanian unification and political independence complicate regional politics, as Basileía Romaíon, Hungary and the Golden Horde have an interest in enforcing the status quo. Can Romania win its freedom?"
+   HUN_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   BYZ_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
 
   # Italy
- PAP_FLAVOR_TEXT: "Though the political power of the Catholic Church has waned over the centuries, the Pope still presides over the Papal States. Does faith still rule the hearts of men?"
- TUS_FLAVOR_TEXT: "The unpopular Duke Leopoldo seeks to liberalize the Grand Duchy, but faces great opposition to his rule. How will Tuscany fare as liberalism and nationalism compete over the hearts and minds of Italians?"
- SIC_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
- PAR_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
- LUC_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
- MOD_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   PAP_FLAVOR_TEXT: "Though the political power of the Catholic Church has waned over the centuries, the Pope still presides over the Papal States. Does faith still rule the hearts of men?"
+   TUS_FLAVOR_TEXT: "The unpopular Duke Leopoldo seeks to liberalize the Grand Duchy, but faces great opposition to his rule. How will Tuscany fare as liberalism and nationalism compete over the hearts and minds of Italians?"
+   SIC_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   PAR_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   LUC_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   MOD_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   VEN_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   LOM_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_genoa_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   SAR_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
   
   # Germans
- BAV_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   BAV_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   SAX_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   POM_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   HES_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   BAD_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   WUR_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_silesia_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   MEI_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   
+  # Western Europe
+   NET_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   HRE_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   FLA_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   BRG_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   OCC_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   BRI_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_provence_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   
+  # British Isles
+   IRE_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   SCO_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   WLS_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   ENG_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   DEN_FLAVOR_TEXT: "By dominating the North Sea, the North Sea Empire attempts to keep its centralizing neighbors away from its valuable tributaries and the profitable North Sea trade."
  
-  #Central Asia
- KHI_FLAVOR_TEXT: "In defiance of both Persia and the Golden Horde, Khiva is an independent power flourishing under the rule of the Khan. Can Khiva protect its independence?"
- BUK_FLAVOR_TEXT: "Unlike the neighboring Khanates, the Emirs of Bukhara embrace Islamic rule rather than basing their legitimacy on descent from Genghis Khan. Will faith win the day?"
- KOK_FLAVOR_TEXT: "Kokand struggles with disunity and discord within the Khan's court. Can Kokand become a dominant power in Central Asia?"
- AFG_FLAVOR_TEXT: "The Persian and Mughal empires watch Afghanistan with greedy eyes, jealous of its opium fields. Is Afghanistan still the graveyard of empires?"
+  # Eastern Europe
+   PLC_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_novgorod_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   UBD_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   MOL_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_blacksea_colonies_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_tartaria_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_muscovy_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+    
+  # Iberia
+   ANL_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   CAS_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   CAT_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   NAV_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+    
+  # Central Asia
+   KHI_FLAVOR_TEXT: "In defiance of both Persia and the Golden Horde, Khiva is an independent power flourishing under the rule of the Khan. Can Khiva protect its independence?"
+   BUK_FLAVOR_TEXT: "Unlike the neighboring Khanates, the Emirs of Bukhara embrace Islamic rule rather than basing their legitimacy on descent from Genghis Khan. Will faith win the day?"
+   KOK_FLAVOR_TEXT: "Kokand struggles with disunity and discord within the Khan's court. Can Kokand become a dominant power in Central Asia?"
+   AFG_FLAVOR_TEXT: "The Persian and Mughal empires watch Afghanistan with greedy eyes, jealous of its opium fields. Is Afghanistan still the graveyard of empires?"
   
-  # Maghreb
- TRI_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
- ALD_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
- MOR_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+  # North Africa
+   br_kyrenaica_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_afrika_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   MOR_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
 
   # Africa
- SOK_FLAVOR_TEXT: "Under the banner of the Fulani Jihad, the Sokoto Caliphate is expanding rapidly. Can Sokoto unite West Africa and resist the Western powers?"
- GREAT_LAKES_FLAVOR_TEXT: "The people of the Great Lakes have established fledgling empires, dominating both water and land. Will a great nation arise from among them?"
- BUG_FLAVOR_TEXT: "$GREAT_LAKES_FLAVOR_TEXT$"
- ACH_FLAVOR_TEXT: "$GREAT_LAKES_FLAVOR_TEXT$"
- BNY_FLAVOR_TEXT: "$GREAT_LAKES_FLAVOR_TEXT$"
- ANK_FLAVOR_TEXT: "$GREAT_LAKES_FLAVOR_TEXT$"
- TGR_FLAVOR_TEXT: "Ethiopia is in the midst of the Age of Princes. The Emperor in Gondar has no effective power and local rulers divide the country between themselves. Will the empire ever be reunited?"
- WLO_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
- BGM_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
- GJM_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
- WLG_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
- KFA_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
- SHW_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
- SDM_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
- BRN_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
- HAR_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
- AWS_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
- SAF_FLAVOR_TEXT: "Originally a Dutch trading post."
-  
+   SOK_FLAVOR_TEXT: "Under the banner of the Fulani Jihad, the Sokoto Caliphate is expanding rapidly. Can Sokoto unite West Africa and resist the Western powers?"
+   TGR_FLAVOR_TEXT: "Ethiopia is in the midst of the Age of Princes. The Emperor in Gondar has no effective power and local rulers divide the country between themselves. Will the empire ever be reunited?"
+   WLO_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
+   BGM_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
+   GJM_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
+   WLG_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
+   KFA_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
+   SHW_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
+   SDM_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
+   BRN_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
+   HAR_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
+   AWS_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
+   SAF_FLAVOR_TEXT: "Originally a Dutch trading post."
+   MAL_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_alodia_FLAVOR_TEXT: "GENERIC_FLAVOR_TEXT$"
+   br_makuria_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   
   # India
- JAS_FLAVOR_TEXT: "Almost all of India is now under the direct or indirect control of the Mughal Empire. The Nawabs of the princely states still exert a strong degree of rule over their territories. Will India ever be free from Mughal rule?"
- JOD_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- BIK_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- JAI_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- MEW_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- GWA_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- IND_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- BER_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- CUT_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- AWA_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- BUN_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- ORI_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- NAG_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- BAS_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- HYD_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- MYS_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- TRA_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- SIN_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- NEP_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- SIK_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
- KUT_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   JAS_FLAVOR_TEXT: "Almost all of India is now under the direct or indirect control of the Mughal Empire. The Nawabs of the princely states still exert a strong degree of rule over their territories. Will India ever be free from Mughal rule?"
+   BIK_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   MEW_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   GWA_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   BER_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   CUT_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   AWA_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   BUN_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   ORI_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   NAG_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   BAS_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   HYD_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   MYS_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   TRA_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   SIN_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   NEP_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   MUG_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   KUT_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   CEY_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   MHR_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   BGL_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   MHR_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   br_romaioi_india_company_FLAVOR_TEXT: "$JAS_FLAVOR_TEXT$"
+   
   
   # Middle-East
-
- OMA_FLAVOR_TEXT: "Ruling over both Oman and Zanzibar, the Sultanate is establishing an intercontinental empire. Can Oman remain united?"
-
- KOR_FLAVOR_TEXT: "Korea under the Joseon dynasty looks inward, consumed by its factional politics. Will changing times force Korea to consider the outside world?"
- NOR_FLAVOR_TEXT: "Norway has spent centuries under Danish and Swedish rule, but now dreams of sovereignty. What will it take for Norway to win its independence?"
- FIN_FLAVOR_TEXT: "Finland has thus far enjoyed relative autonomy under the Swedish Empire."
+   OMA_FLAVOR_TEXT: "Ruling over both Oman and Zanzibar, the Sultanate is establishing an intercontinental empire. Can Oman remain united?"
+   PER_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   ARA_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_aegypt_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   
+  # North America
+   br_elysium_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_louisiane_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_chinese_new_world_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_japanese_new_world_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_vinland_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_new_world_company_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
   
-  #South and Central America
-
+  # South and Central America
+   br_new_angland_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   TWT_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_antarctique_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_dutch_west_indies_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_klein_venedig_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_new_granada_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   MAY_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   NAH_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_atlantica_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_giamaica_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   
  GENERIC_FLAVOR_TEXT: "The industrial era is a time of great change; cultural, economic, scientific, social and more. As these changes accelerate, one can only wonder what the future will entail."
  REV_GENERIC_FLAVOR_TEXT: "Dissatisfied with the direction that the so-called organized government was taking, these revolutionaries have decided to take up arms to overthrow it. Will they succeed in seizing power or will they be crushed like so many forgotten revolutions of the past?"
  DECENTRALIZED_FLAVOR_TEXT: "Encroached upon by more organized powers, this country struggles to maintain their autonomy. Will they see the dawn of a new century, or will their name survive only in history books?"
 
  # East Asia
- CHI_FLAVOR_TEXT: "After years of malgovernance under the Yuan dynasty, the Han Chinese has finally revolted against their Mongol overlords. As the world is rapidly industrializing, can the new Ming dynasty adapt to the new era?"
- JAP_FLAVOR_TEXT: "With colonies established across the Pacific Ocean, the Shogunate seems poised for a dominant position in the far East."
+  CHI_FLAVOR_TEXT: "After years of malgovernance under the Yuan dynasty, the Han Chinese has finally revolted against their Mongol overlords. As the world is rapidly industrializing, can the new Ming dynasty adapt to the new era?"
+  JAP_FLAVOR_TEXT: "With colonies established across the Pacific Ocean, the Shogunate seems poised for a dominant position in the far East."
+  KOR_FLAVOR_TEXT: "Korea under the Joseon dynasty looks inward, consumed by its factional politics. Will changing times force Korea to consider the outside world?"
+  br_great_yuan_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+  br_japanese_siberia_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
 
  # Scandinavia
- DEN_FLAVOR_TEXT: "By dominating the North Sea, the North Sea Empire attempts to keep its centralizing neighbors away from its valuable tributaries and the profitable North Sea trade."
+  NOR_FLAVOR_TEXT: "Norway has spent centuries under Danish and Swedish rule, but now dreams of sovereignty. What will it take for Norway to win its independence?"
+  FIN_FLAVOR_TEXT: "Finland has thus far enjoyed relative autonomy under the Swedish Empire."
+  SWE_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+  br_jamland_harjedalen_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
 
  # Nonsense Countries
 
