--- a/localization/english/eocfm_events_l_english.yml
+++ b/localization/english/eocfm_events_l_english.yml
@@ -15,7 +15,7 @@
  eocfm.004.t: "The Most Holy Synod"
  eocfm.004.d: "The Eastern Orthodox Church of [ROOT.GetCountry.GetName] has grown to become one of the largest and most influential of the Patriarchates of the Eastern Church."
  eocfm.004.f: "Historical note: Basil II, of Basileía Romaíon, encouraged Vladimir I to convert to Christianity, offering a marriage alliance with his sister, Anna. Vladimir, ruling Kievan Rus' from 980 to 1015, is renowned for Christianizing the territory. Despite early pagan traditions, Vladimir's envoys found Orthodox Christianity in Konstantinopolis particularly compelling. Negotiations led to Vladimir's baptism and marriage to Anna in 988, solidifying the region's Christian faith and political alliance with Basileía Romaíon. Upon returning to Kiev, Vladimir baptized his family and the people, marking a significant religious transformation known as the Baptism of the Rus"
- eocfm.004.a: ""Oriental affairs are above all a matter for all Russia.""
+ eocfm.004.a: ""Oriental affairs are above all a matter for Russia.""
 
  eocfm.010.t: "Ecumenical Reforms"
  eocfm.010.d: "The Eastern Orthodox Church is the one true successor to the Great Church founded by Jesus Christ. Yet, with its decentralized structure, deviations have developed between the various churches over the centuries. A cohort of bishops have requested state support in implementing some liturgical changes in the interest of better aligning ourselves with the rest of the Orthodox family."
@@ -210,11 +210,12 @@
  eocfm.121.t: "The Council of [ROOT.GetCountry.GetCapital.GetCityHubName]"
  eocfm.121.d: "As bishops begin to form their delegations, the Orthodox community has looked to us to guide the focus of the next ecumenical council."
  eocfm.121.f: "While unrecognized by the Bishop of Rome, the councils hold tremendous weight across the Orthodox world."
- eocfm.121.a: "Revive the Great Holy War."
- eocfm.121.b: "Rebutt the Pope's patronizing attitude."
- eocfm.121.c: "Confront the Heresey of Phyletism."
- eocfm.121.e: "Modernize the Church Calendar."
- eocfm.121.g: "Mend the Great Schism."
+ eocfm.121.1: "Revive the Great Holy War."
+ eocfm.121.2: "Rebutt the Pope's patronizing attitude."
+ eocfm.121.3: "Confront the Heresey of Phyletism."
+ eocfm.121.4: "Modernize the Church Calendar."
+ eocfm.121.5: "Mend the Great Schism."
+ eocfm.121.6: "Declare the Orthodox State."
  eocfm.122.t: "Birth of the New Crusades"
  eocfm.122.d: "Following weeks of theological and moral debate, the Partiarchs have stepped forward with a unified message: that the use of force to protect Christians abroad from persecution is not only right, but divinely mandated."
  eocfm.122.f: "No longer will the Orthodox Church stand by as the faithful suffer the abuses of both the western heretics and eastern heathens."
@@ -253,11 +254,10 @@
  eocfm.128.f: ""The difference between the length of the political year of the new calendar and the Gregorian is so small that only after 877 years it is observed difference of dates. -M. Milanković, 1923"
  eocfm.128.a: "This is the right choice."
  eocfm.128.b: "We will not abandon our roots."
- eocfm.129.t: "The Old Calendarists"
- eocfm.129.d: ""
- eocfm.129.f: ""
- eocfm.129.a: ""
- eocfm.129.b: ""
+ eocfm.129.t: "The Basileía Romaíon Commonwealth"
+ eocfm.129.d: "In an arrogant and pompous ceremony in [SCOPE.sCountry('eocfm_conqueror_scope').GetCapital.GetName], [SCOPE.sCountry('eocfm_conqueror_scope').GetName] has declared the creation of the #bold #o Orthodox Commonwealth#!#!. With an aim to unify all [GetReligion('orthodox').GetName] peoples under one banner, this, no doubt, threatens the international order."
+ eocfm.129.f: ""According to the apostolic teaching and the doctrine of the Gospel, let us believe in the one Deity of the Father, Son and Holy Spirit, in equal majesty and in a holy Trinity. We authorize the followers of this law to assume the title Catholic Christians; but as for the others, since in our judgment they are foolish madmen, we decree that they shall be branded with the ignominious name of heretics, and shall not presume to give their conventicles the name of churches." -Theodosius I"
+ eocfm.129.a: "What does this mean?"
  
  eocfm.130.t: "The [SCOPE.sCountry('eocfm_crusade_target_scope').GetAdjectiveNoFormatting] Crusade"
  eocfm.130.d: "At the behest of [ROOT.GetCountry.GetRuler.GetFullName], the [SCOPE.gsInterestGroup('devout_scope').GetName] have organized and declared a [Concept('concept_crusades','$concept_crusade$')] against the unfidels of [SCOPE.sCountry('eocfm_crusade_target_scope').GetName]."
