Created Kappadokía Pronoia
Created Kappadokía Pronoia

--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -110,6 +110,8 @@
  br_ravenna_ADJ: "Ravenna"
  br_arelat: "Arelat Kingdom"
  br_arelat_ADJ: "Burgundian"
+ br_kappadocia: "Kappadokía"
+ br_kappadocia_ADJ: "Kappadokían"
 
  #New World
  br_klein_venedig: "Klein-Venedig"
