--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -196,3 +196,14 @@
  #je_princely_league_main_goal:0 "???"
  je_princely_league_main_reason: "We must break free from the chain held by our overlord, but in order to achieve this we will have to gather support from other countries, in particular our fellow subjects would be good allies."
  princely_league_exists_tt: "The Gemanic League exists."
+
+ je_reclaim_england: "Reclaim England"  
+ je_reclaim_england_reason: "Having secured our freedom, it's time to reclaim our rightful lands."  
+ je_conquer_wales: "Subjugate Wales"  
+ je_conquer_wales_reason: "Wales belongs under our banner!"
+
+ je_reclaiming_aquitaine: "Annex Aquitaine"  
+ je_reclaiming_aquitaine_reason: "Aquitaine rightfully belongs within our Empire."
+
+ je_reclaiming_transylvania: "Annex Transylvania"
+ je_reclaiming_transylvania_reason: "Transylvania must be fully reincorporated into our realm."
