Armenia JE + fixes
Added a JE for Armenia to restore its eastern borders and couple minor fixes for the previous JEs

--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -207,3 +207,6 @@
 
  je_reclaiming_transylvania: "Annex Transylvania"
  je_reclaiming_transylvania_reason: "Transylvania must be fully reincorporated into our realm."
+
+ je_reclaiming_armenia: "Restore Eastern Armenia"
+ je_reclaiming_armenia_reason: "Eastern Armenia must be fully reincorporated into our realm."
