Further work on new JEs
- Added a JE for Serbia to restore their national borders
- Added a JE related to gaining independence available to all subject nations once nationalism is researched
- Added new modifiers to some of the new JEs
- Other bug fixes
- Futher work on AI

--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -3,7 +3,7 @@
 #New 
  cappadocian: "Kappadokikí"
  anatolian: "Anatolikós"
- pontic: "Pontíoi"
+ pontic: "Pontiaká"
  african: "Afrikanós"
  aegyptian: "Aegýptian"
  syriac: "Syriac"
@@ -45,7 +45,7 @@
  romaniote: "Romaniote" #greco-roman jews in the ERE.
  mizrahi: "Musta'Arabi" #Jews in the Arab / Persian World.
 
-#Renamed Currently all renamed cultures do not work unless they are renamed in cultures_1
+#Renamed Currently all renamed cultures do not work unless they are renamed in cultures_1 within the replace folder
  #greek:1 "Romaíoi" 
  #romanian: "Vlach"
  #sudanese: "Nubian"
