--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -217,6 +217,9 @@
  br_balkan_modifier_preventing_attrocities: "Preventing Attrocities"
  br_balkan_modifier_encouraging_attrocities: "Encouraging Attrocities"
 
+ br_modifier_gain_independence: "Independence Spirit"
+ br_modifier_national_restoration: "National Restoration"
+
 
 
  
