--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -210,3 +210,9 @@
 
  je_reclaiming_armenia: "Restore Eastern Armenia"
  je_reclaiming_armenia_reason: "Eastern Armenia must be fully reincorporated into our realm."
+
+ je_restore_serbia: "Restore Serbia"
+ je_restore_serbia_reason: "Autonomous princelings must be fully reincorporated into our realm."
+
+ je_br_gain_independence: "Gain Independence"
+ je_br_gain_independence_reason: "Gain our Independence"
