--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -216,3 +216,6 @@
 
  je_br_gain_independence: "Gain Independence"
  je_br_gain_independence_reason: "Gain our Independence"
+
+ je_control_nile: "Control Nile"
+ je_control_nile_reason: "Control Nile"
