--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -219,3 +219,6 @@
 
  je_control_nile: "Control Nile"
  je_control_nile_reason: "Control Nile"
+
+ je_restore_russia: "Restore Russia"
+ je_restore_russia_reason: "Autonomous princelings must be fully reincorporated into our realm."
