Colonial expansion JEs
- Added a JE to help Elysium expand Westward.
			- Added a JE to help Vineland expand Westward.
			- Added a JE for Tartara to expand Eastward into the Steppe/Siberia.
			- Added a JE for Japanese Shiberia to expand deeper into Siberia.
			- Added a JE for restoring Russia (Available to 'recognized' Russo-Ruthenian Countries)
- adjusted the new unique power bloc identity for the HRE.
		- Created a new Power bloc principle

--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -201,24 +201,29 @@
  je_reclaim_england_reason: "Having secured our freedom, it's time to reclaim our rightful lands."  
  je_conquer_wales: "Subjugate Wales"  
  je_conquer_wales_reason: "Wales belongs under our banner!"
-
  je_reclaiming_aquitaine: "Annex Aquitaine"  
  je_reclaiming_aquitaine_reason: "Aquitaine rightfully belongs within our Empire."
-
  je_reclaiming_transylvania: "Annex Transylvania"
  je_reclaiming_transylvania_reason: "Transylvania must be fully reincorporated into our realm."
-
  je_reclaiming_armenia: "Restore Eastern Armenia"
  je_reclaiming_armenia_reason: "Eastern Armenia must be fully reincorporated into our realm."
-
  je_restore_serbia: "Restore Serbia"
  je_restore_serbia_reason: "Autonomous princelings must be fully reincorporated into our realm."
-
  je_br_gain_independence: "Gain Independence"
  je_br_gain_independence_reason: "Gain our Independence"
-
  je_control_nile: "Control Nile"
  je_control_nile_reason: "Control Nile"
-
  je_restore_russia: "Restore Russia"
  je_restore_russia_reason: "Autonomous princelings must be fully reincorporated into our realm."
+ je_elysium_expand_01: "Expand Westward"
+ je_elysium_expand_01_reason: "Expand Westward."
+ je_vineland_expand_01: "Expand Westward"
+ je_vineland_expand_01_reason: "Expand Westward."
+ je_tartaria_steppe_expansion: "Steppe Expansion"
+ je_tartaria_steppe_expansion_reason: "Expand Eastward further into the Steppe and Siberia."
+ je_japanese_siberia_expansion: "Shiberia Expansion"
+ je_japanese_siberia_expansion_reason: "Expand Deeper into Shiberia."
+
+
+ 
+ 
