--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -66,7 +66,7 @@
  br_modifier_horde_reactionary_social_policies: "Reactionary Social Policies"
  br_modifier_horde_army_prowess: "Army Prowess"
  br_modifier_nomad_heritage: "Nomadic Heritage"
- br_steppe_colonial_expansion: "Steppe Expansion"
+ br_steppe_colonial_expansion: "Expand into Siberia"
  br_modifier_religious_tolerance: "Religious Tolerance"
 
  #Persia
@@ -219,6 +219,8 @@
 
  br_modifier_gain_independence: "Independence Spirit"
  br_modifier_national_restoration: "National Restoration"
+
+ br_new_world_westward_colonial_expansion: "Westward Expansion"
 
 
 
