JEs, AI, small fixes
- Added a JE for the east india trade companies to control the spice trade moved the modifier to the JE.
- Added a JE for Mughals to consolidate Northern India
			- Added a JE for Persia to directly control Afganistan
			- Added a JE for Persia to directly control Central Asia

--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -211,6 +211,8 @@
  je_restore_serbia_reason: "Autonomous princelings must be fully reincorporated into our realm."
  je_br_gain_independence: "Gain Independence"
  je_br_gain_independence_reason: "Gain our Independence"
+ je_br_east_indies_trade: "Control trade in the East Indies"
+ je_br_east_indies_trade_reason: "Control trade in the East Indies"
  je_control_nile: "Control Nile"
  je_control_nile_reason: "Control Nile"
  je_restore_russia: "Restore Russia"
@@ -223,6 +225,12 @@
  je_tartaria_steppe_expansion_reason: "Expand Eastward further into the Steppe and Siberia."
  je_japanese_siberia_expansion: "Shiberia Expansion"
  je_japanese_siberia_expansion_reason: "Expand Deeper into Shiberia."
+ je_persia_expansion_01: "Afganistan"
+ je_persia_expansion_01_reason: "Our Control over the region has devolved into a patch work of autonomous Satrapies."
+ je_persia_expansion_02: "Central Asia"
+ je_persia_expansion_02_reason: "The Central Asian Khanates should be brought under direct Persian rule."
+ je_consolidate_india_01: "Consolidate Rule"
+ je_consolidate_india_01_reason: "Our Control over certain regions has been lost in all but name as Governors have entreched themselves."
 
 
  
