JEs, Decisions, AI, Fixes
- Added new modifiers to most of the new JEs
		- Added a JE for Colonial Subjects
		- Added a JE for New World Colonies
		- Added a JE for Africa Colonies
		- Added a JE for Independent New World Countries
		- Added a JE dealing with Inward Perfection
- Decreased the wage bonus primary culture received as it was bankrupting everyone.
- Renamed the culture of Kōkaijin to Kaitakusha.
		- Added a bit more taxes to unincorporated states if you didn't know unincorporated states pay taxes in BR 0.15 in each source.

--- a/localization/braz_por/br_cultures_l_braz_por.yml
+++ b/localization/braz_por/br_cultures_l_braz_por.yml
@@ -30,7 +30,7 @@
  colonial_dutch: "Colonial-Dutch"
  colonial_british: "New Anglander"
  colonial_andalusian: "New Grenadian"
- colonial_japanese: "Kōkaijin"
+ colonial_japanese: "Colonial-Japanese"
  colonial_chinese: "Huáqiáo"
 
  #Afro Cultures.
