--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -231,6 +231,16 @@
  je_persia_expansion_02_reason: "The Central Asian Khanates should be brought under direct Persian rule."
  je_consolidate_india_01: "Consolidate Rule"
  je_consolidate_india_01_reason: "Our Control over certain regions has been lost in all but name as Governors have entreched themselves."
+ je_br_colonial_subject: "Colonial Subject"
+ je_br_colonial_subject_reason: "We enjoy subsidies and protection of our mother country."
+ je_br_new_world_colony: "New World Colony"
+ je_br_new_world_colony_reason: "New World Colony."
+ je_br_africa_colony: "Africa Colony"
+ je_br_africa_colony_reason: "Africa Colony"
+ je_br_independent_new_world_country: "New World Country"
+ je_br_independent_new_world_country_reason: "New World Country."
+ je_br_inward_perfection: "Inward Perfection"
+ je_br_inward_perfection_reason: "We have shut ourselves off from foreign peoples and their ideas, perhaps its time to open up?"
 
 
  
