--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -214,6 +214,8 @@
 
  br_state_modifier_grand_port: "Grand Port"
 
+
+ 
  br_balkan_modifier_preventing_attrocities: "Preventing Attrocities"
  br_balkan_modifier_encouraging_attrocities: "Encouraging Attrocities"
 
@@ -221,6 +223,8 @@
  br_modifier_national_restoration: "National Restoration"
 
  br_new_world_westward_colonial_expansion: "Westward Expansion"
+ br_modifier_spice_monopoly: "Spice Monopoly"
+ br_rajputs_modifier: "Rajputs"
 
 
 
