--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -30,7 +30,7 @@
  colonial_dutch: "Colonial-Dutch"
  colonial_british: "New Anglander"
  colonial_andalusian: "New Grenadian"
- colonial_japanese: "Kōkaijin"
+ colonial_japanese: "Kaitakusha" #formerly Kōkaijin
  colonial_chinese: "Huáqiáo"
 
  #Afro Cultures.
