--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -240,7 +240,16 @@
  je_br_independent_new_world_country: "New World Country"
  je_br_independent_new_world_country_reason: "New World Country."
  je_br_inward_perfection: "Inward Perfection"
- je_br_inward_perfection_reason: "We have shut ourselves off from foreign peoples and their ideas, perhaps its time to open up?"
+ je_br_inward_perfection_reason: "We have shut ourselves off from foreign peoples and their ideas, perhaps its time to open up and modernize?"
+ je_tartaria_modernize: "Modernize Tartaria"
+ je_tartaria_modernize_reason: "We should modernize our society or risk falling further behind."
+ je_tartaria_end_slavic_oppression: "End Slavic Oppression"
+ je_tartaria_end_slavic_oppression_reason: "We should stop Oppressing our Slavic and other minorities so that they may contribute to our growth."
+
+ je_br_mediterranean_merchant_republic: "Merchant Republic"
+ je_br_mediterranean_merchant_republic_reason: "Our Republic stands strong, admired by the world for all we have achieved. However, our advantages are not eternal. It is crucial that we safeguard our edge, as our rivals seek to undermine everything we have built."
+ je_br_colonial_merchant_republic: "Colonial Merchant State"
+ je_br_colonial_merchant_republic_reason: "Colonial Merchant State"
 
 
  
