--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -395,6 +395,12 @@
  br_principle_autonomous_government_2_desc: "$br_principle_group_autonomous_government_desc$"
  br_principle_autonomous_government_3_desc: "$br_principle_group_autonomous_government_desc$"
 
+ br_principle_economic_imperialism: "Economic Imperialism"
+ br_principle_economic_imperialism_desc: "Economic Imperialism."
+ br_principle_economic_imperialism_1_desc: "$br_principle_economic_imperialism_desc$"
+ br_principle_economic_imperialism_2_desc: "$br_principle_economic_imperialism_desc$"
+ principle_economic_imperialism_3_desc: "$br_principle_economic_imperialism_desc$"
+
  
 
 
