--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -245,11 +245,21 @@
  je_tartaria_modernize_reason: "We should modernize our society or risk falling further behind."
  je_tartaria_end_slavic_oppression: "End Slavic Oppression"
  je_tartaria_end_slavic_oppression_reason: "We should stop Oppressing our Slavic and other minorities so that they may contribute to our growth."
-
  je_br_mediterranean_merchant_republic: "Merchant Republic"
  je_br_mediterranean_merchant_republic_reason: "Our Republic stands strong, admired by the world for all we have achieved. However, our advantages are not eternal. It is crucial that we safeguard our edge, as our rivals seek to undermine everything we have built."
  je_br_colonial_merchant_republic: "Colonial Merchant State"
  je_br_colonial_merchant_republic_reason: "Colonial Merchant State"
+ 
+ je_br_baltic_toll_collection_rights: "Control over Baltic trade"
+ je_br_baltic_toll_collection_rights_reason: "Having control over trade in the Baltic we are able to collect a toll on all ships."
+ je_br_strait_of_hercules: "Control over the Strait of Hercules"
+ je_br_strait_of_hercules_reason: "Having control over Strait of Hercules we are able to collect a toll on all ships."
+ je_br_bosphorus_strait_toll: "Control over Bosphorus Straits"
+ je_br_bosphorus_strait_toll_reason: "Having control over Bosphorus Straits we are able to collect a toll on all ships."
+ je_br_klysma_canal_toll: "Control over the Klysma Canal"
+ je_br_klysma_canal_toll_reason: "Having control over Klysma Canal we are able to collect a toll on all ships."
+ je_br_persian_strait_toll: "Control over Persian straits"
+ je_br_persian_strait_toll_reason: "Having control over Persian straits we are able to collect a toll on all ships."
 
 
  
