--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -226,6 +226,12 @@
  br_modifier_spice_monopoly: "Spice Monopoly"
  br_rajputs_modifier: "Rajputs"
 
+ br_modifier_strait_of_hercules_toll: "Strait of Hercules Toll"
+ br_modifier_bosphorus_strait_toll: "Bosphorus Strait Toll"
+ br_modifier_klysma_canal_toll: "Klysma Canal Toll"
+ br_modifier_persian_strait_toll: "Persian Strait Toll"
+
+
 
 
  
