--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -54,6 +54,11 @@
  frankish_revolt.1.a: "Crush and fully integrate all of Francia into our direct domain!"
  frankish_revolt.1.b: "Recognize our german speaking subjects as equal to the latin speakers and give the lords greater autonomy."
 
+ bengal_revolt.1.t: "Bengal Governor Revolts"
+ bengal_revolt.1.d: "Governor of Bengal has used the chaos of our current war to gain independence for his fief."
+ bengal_revolt.1.f: "Governor of Bengal has used the chaos of our current war to gain independence for his fief."
+ bengal_revolt.1.a: "Crush and fully integrate all of Bengal into our direct domain!"
+
  aegyptian_crisis_events.1.t: "Reasserting Our Control in Syria"
  aegyptian_crisis_events.1.d: "The Aegyptian Exarchate, nominally our vassal, has been a valuable and integral part of this empire for centuries but has been acting independently under the rule of Ioannes Komnenos. We tolerated the status quo for too long, and this recent aggression must be met with overwhelming force."
  aegyptian_crisis_events.1.f: "\"What once was ours shall be ours again. The imprint we've left on Aegypt and the Levant cannot be ignored. Like the lines that time carves on a mountain, we have also carved our destiny on their land with the footprints of our ancestors.\n\nGo, go now, children of the Sun!\""
